--- a/Resources/Prototypes/Chemistry/metabolizer_types.yml
+++ b/Resources/Prototypes/Chemistry/metabolizer_types.yml
@@ -8,3 +8,7 @@
 - type: metabolizerType
   id: Human
   name: metabolizer-type-human
+
+- type: metabolizerType
+  id: Plant
+  name: metabolizer-type-plant
