--- a/Resources/Prototypes/Entities/Mobs/Cyborgs/base_borg_chassis.yml
+++ b/Resources/Prototypes/Entities/Mobs/Cyborgs/base_borg_chassis.yml
@@ -298,7 +298,7 @@
     tags:
     - Borg
   - type: AccessReader
-    access: [["AllAccess"]]
+    access: [["Maintenance"]]
   - type: ShowJobIcons
   - type: InteractionPopup
     interactSuccessSound:
