--- a/Resources/Prototypes/Entities/Structures/Machines/smartfridge.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/smartfridge.yml
@@ -125,4 +125,4 @@
   - type: SmartFridge
     flavorText: smart-fridge-request-chemistry
   - type: AccessReader
-    access: [["AllAccess"]]
+    access: [["Maintenance"]]
