--- a/Resources/Prototypes/Entities/Structures/cryogenic_sleep_unit.yml
+++ b/Resources/Prototypes/Entities/Structures/cryogenic_sleep_unit.yml
@@ -22,7 +22,7 @@
     key: enum.CryostorageUIKey.Key
   - type: AccessReader
     breakOnAccessBreaker: false
-    access: [["AllAccess"]]
+    access: [["Maintenance"]]
     examinationText: access-reader-examination-functionality-restricted
   - type: InteractionOutline
   - type: Cryostorage
