--- a/Resources/Prototypes/Reagents/medicine.yml
+++ b/Resources/Prototypes/Reagents/medicine.yml
@@ -4,8 +4,6 @@
   group: Medicine
   desc: reagent-desc-cryptobiolin
   physicalDesc: reagent-physical-desc-fizzy
-  allowedDepartments:
-  - Medical
   flavor: medicine
   color: "#081a80"
   metabolisms:
@@ -398,8 +396,6 @@
   group: Medicine
   desc: reagent-desc-ipecac
   physicalDesc: reagent-physical-desc-inky
-  allowedDepartments:
-  - Medical
   flavor: medicine
   color: "#422912"
   metabolisms:
@@ -783,7 +779,22 @@
             Shock: -0.33
             Cold: -0.33
 
-  # Should heal quite literally everything, use in very small amounts
+- type: reagent
+  id: Lipozine
+  name: reagent-name-lipozine
+  group: Medicine
+  desc: reagent-desc-lipozine
+  physicalDesc: reagent-physical-desc-oily
+  flavor: medicine
+  color: "#2690b5"
+  metabolisms:
+    Medicine:
+      effects:
+      # what the hell, this isn't satiating at all!!
+      - !type:SatiateHunger
+        factor: -1
+
+# Should heal quite literally everything, use in very small amounts
 - type: reagent
   id: Omnizine
   name: reagent-name-omnizine
@@ -879,7 +890,7 @@
   desc: reagent-desc-cognizine
   group: Medicine
   physicalDesc: reagent-physical-desc-enigmatic
-  flavor: magical
+  flavor: holy
   color: "#b50ee8"
   metabolisms:
     Medicine:
@@ -1012,7 +1023,7 @@
   group: Medicine
   desc: reagent-desc-lacerinol
   physicalDesc: reagent-physical-desc-viscous
-  flavor: syrupy
+  flavor: slimy
   color: "#283332"
   metabolisms:
     Medicine:
@@ -1135,7 +1146,7 @@
   group: Medicine
   desc: reagent-desc-pyrazine
   physicalDesc: reagent-physical-desc-thick
-  flavor: syrupy
+  flavor: slimy
   color: "#aa4308"
   metabolisms:
     Medicine:
@@ -1325,8 +1336,6 @@
   group: Medicine
   desc: reagent-desc-warfarin
   physicalDesc: reagent-physical-desc-thin
-  allowedDepartments:
-  - Medical
   flavor: medicine
   color: "#d0e21b"
   metabolisms:
