--- a/Resources/Prototypes/Voice/speech_emotes.yml
+++ b/Resources/Prototypes/Voice/speech_emotes.yml
@@ -56,6 +56,24 @@
     - chortling
 
 - type: emote
+  id: Honk
+  name: chat-emote-name-honk
+  category: Vocal
+  icon: Interface/Emotes/honk.png
+  whitelist:
+    requireAll: true
+    components:
+    - Vocal
+    tags:
+    - SiliconEmotes
+  chatMessages: ["chat-emote-msg-honk"]
+  chatTriggers:
+    - honk
+    - honks
+    - honked
+    - honking
+
+- type: emote
   id: Sigh
   name: chat-emote-name-sigh
   category: Vocal
@@ -108,6 +126,24 @@
     - sob
     - sobs
     - sobbing
+
+- type: emote
+  id: Squish
+  name: chat-emote-name-squish
+  category: Vocal
+  available: false
+  icon: Interface/Emotes/squish.png
+  whitelist:
+    components:
+    - Vocal
+  blacklist:
+    tags:
+    - SiliconEmotes
+  chatMessages: ["chat-emote-msg-squish"]
+  chatTriggers:
+    - squish
+    - squishing
+    - squishes
 
 - type: emote
   id: Click
@@ -227,3 +263,100 @@
   chatMessages: ["chat-emote-msg-deathgasp"]
   chatTriggers:
   - deathgasp
+
+- type: emote
+  id: Buzz
+  name: chat-emote-name-buzz
+  category: Vocal
+  icon: Interface/Emotes/buzz.png
+  whitelist:
+    requireAll: true
+    components:
+    - Vocal
+    tags:
+    - SiliconEmotes
+  chatMessages: ["chat-emote-msg-buzz"]
+  chatTriggers:
+    - buzzing
+    - buzz
+    - buzzed
+    - buzzes
+
+# Machine Emotes
+- type: emote
+  id: Beep
+  name: chat-emote-name-beep
+  category: Vocal
+  icon: Interface/Emotes/beep.png
+  whitelist:
+    requireAll: true
+    components:
+    - Vocal
+    tags:
+    - SiliconEmotes
+  chatMessages: ["chat-emote-msg-beep"]
+  chatTriggers:
+    - beep
+    - beeps
+    - beeped
+    - beeping
+
+- type: emote
+  id: Chime
+  name: chat-emote-name-chime
+  category: Vocal
+  icon: Interface/Emotes/chime.png
+  whitelist:
+    requireAll: true
+    components:
+    - Vocal
+    tags:
+    - SiliconEmotes
+  chatMessages: ["chat-emote-msg-chime"]
+  chatTriggers:
+    - chime
+    - chimes
+    - chimed
+    - chiming
+
+- type: emote
+  id: Buzz-Two
+  name: chat-emote-name-buzztwo
+  category: Vocal
+  icon: Interface/Emotes/buzztwo.png
+  whitelist:
+    requireAll: true
+    components:
+    - Vocal
+    tags:
+    - SiliconEmotes
+  chatMessages: ["chat-emote-msg-buzzestwo"]
+  chatTriggers:
+    - buzztwice
+    - buzzstwice
+    - buzzestwice
+    - buzzingtwice
+    - buzzedtwice
+    - buzz twice
+    - buzzs twice
+    - buzzes twice
+    - buzzing twice
+    - buzzed twice
+
+- type: emote
+  id: Ping
+  name: chat-emote-name-ping
+  category: Vocal
+  icon: Interface/Emotes/ping.png
+  whitelist:
+    requireAll: true
+    components:
+    - Vocal
+    tags:
+    - SiliconEmotes
+  chatMessages: ["chat-emote-msg-ping"]
+  chatTriggers:
+    - ping
+    - pings
+    - pinged
+    - pinging
