--- a/Resources/Prototypes/World/Biomes/failsafes.yml
+++ b/Resources/Prototypes/World/Biomes/failsafes.yml
@@ -12,4 +12,9 @@
       densityNoiseChannel: Density
     - type: SimpleDebrisSelector
       debrisTable:
-
+        - id: AsteroidDebrisSmall
+        - id: AsteroidDebrisMedium
+        - id: AsteroidDebrisLarge
+          prob: 0.7
+        - id: AsteroidDebrisLarger
+          prob: 0.4
