--- a/Resources/Prototypes/Device/devicenet_frequencies.yml
+++ b/Resources/Prototypes/Device/devicenet_frequencies.yml
@@ -1,7 +1,17 @@
 - type: deviceFrequency
+  id: ShuttleTimer
+  name: device-frequency-prototype-name-shuttle-timer
+  frequency: 2450
+
+- type: deviceFrequency
   id: SurveillanceCamera
   name: device-frequency-prototype-name-surveillance-camera
   frequency: 1926 # i only have so many of these, y'know?
+
+- type: deviceFrequency
+  id: SurveillanceCameraGeneral
+  name: device-frequency-prototype-name-surveillance-camera-general
+  frequency: 1938
 
 - type: deviceFrequency
   id: AtmosMonitor
@@ -19,6 +29,18 @@
   id: CrewMonitor
   name: device-frequency-prototype-name-crew-monitor
   frequency: 1261
+
+# Cyborgs broadcast to consoles on this frequency
+- type: deviceFrequency
+  id: RoboticsConsole
+  name: device-frequency-prototype-name-robotics-console
+  frequency: 1291
+
+# Console sends commands to cyborgs on this frequency
+- type: deviceFrequency
+  id: CyborgControl
+  name: device-frequency-prototype-name-cyborg-control
+  frequency: 1292
 
 # This frequency will likely have a LARGE number of listening entities. Please don't broadcast on this frequency.
 - type: deviceFrequency
@@ -40,3 +62,8 @@
   id: BasicDevice
   name: device-frequency-prototype-name-basic-device
   frequency: 1280
+
+- type: deviceFrequency
+  id: SurveillanceCameraEntertainment
+  name: device-frequency-prototype-name-surveillance-camera-entertainment
+  frequency: 1939
