--- a/Resources/Prototypes/Entities/Objects/Fun/pai.yml
+++ b/Resources/Prototypes/Entities/Objects/Fun/pai.yml
@@ -46,7 +46,7 @@
     roleDescription: pai-system-role-description
     roleRules: ghost-role-information-familiar-rules
     mindRoles:
-    - MindRoleGhostRoleFamiliar
+    - MindRoleGhostRoleFreeAgent
     wipeVerbText: pai-system-wipe-device-verb-text
     wipeVerbPopup: pai-system-wiped-device
     stopSearchVerbText: pai-system-stop-searching-verb-text
@@ -102,3 +102,50 @@
   - type: Tag
     tags:
     - SiliconEmotes
+
+# PAI Actions
+
+- type: entity
+  parent: ActionIntrinsicStore
+  id: ActionPAIOpenShop
+  name: Software Catalog
+  description: Install new software to assist your owner.
+
+- type: entity
+  parent: BaseMentalAction
+  id: ActionPAIMassScanner
+  name: Mass Scanner
+  description: View a mass scanner interface.
+  components:
+  - type: Action
+    icon: { sprite: Interface/Actions/actions_ai.rsi, state: mass_scanner }
+    itemIconStyle: NoItem
+  - type: InstantAction
+    event: !type:OpenUiActionEvent
+      key: enum.RadarConsoleUiKey.Key
+
+- type: entity
+  parent: BaseMentalAction
+  id: ActionPAIPlayMidi
+  name: Play MIDI
+  description: Open your portable MIDI interface to soothe your owner.
+  components:
+  - type: Action
+    icon: Interface/Actions/pai-midi.png
+    itemIconStyle: NoItem
+  - type: InstantAction
+    event: !type:OpenUiActionEvent
+      key: enum.InstrumentUiKey.Key
+
+- type: entity
+  parent: BaseMentalAction
+  id: ActionPAIOpenMap
+  name: Open Map
+  description: Open your map interface and guide your owner.
+  components:
+  - type: Action
+    icon: { sprite: Interface/Actions/pai-map.rsi, state: icon }
+    itemIconStyle: NoItem
+  - type: InstantAction
+    event: !type:OpenUiActionEvent
+      key: enum.StationMapUiKey.Key
