--- a/Resources/Prototypes/Entities/Structures/Doors/Firelocks/firelock.yml
+++ b/Resources/Prototypes/Entities/Structures/Doors/Firelocks/firelock.yml
@@ -131,7 +131,7 @@
     - type: StaticPrice
       price: 150
     - type: AccessReader
-      access: [ [ "AllAccess" ] ]
+      access: [ [ "Maintenance" ] ]
       examinationText: access-reader-examination-functionality-restricted
     - type: PryUnpowered
       pryModifier: 0.5
