--- a/Resources/Prototypes/Entities/Structures/Machines/vending_machines.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/vending_machines.yml
@@ -234,7 +234,7 @@
     - state: panel
       map: ["enum.WiresVisualLayers.MaintenancePanel"]
   - type: AccessReader
-    access: [["AllAccess"]]
+    access: [["Maintenance"]]
   - type: GuideHelp
     guides:
     - Drinks
@@ -366,35 +366,6 @@
     energy: 3.0
     color: "#d4ab33"
 
-- type: entity
-  parent: VendingMachine
-  id: VendingMachineSalvage
-  name: Salvage Vendor
-  description: A dwarf's best friend!
-  components:
-  - type: VendingMachine
-    pack: SalvageEquipmentInventory
-    offState: off
-    brokenState: broken
-    normalState: normal-unshaded
-    denyState: deny-unshaded
-  - type: Sprite
-    sprite: Structures/Machines/VendingMachines/mining.rsi
-    layers:
-    - state: "off"
-      map: ["enum.VendingMachineVisualLayers.Base"]
-    - state: "off"
-      map: ["enum.VendingMachineVisualLayers.BaseUnshaded"]
-      shader: unshaded
-    - state: panel
-      map: ["enum.WiresVisualLayers.MaintenancePanel"]
-  - type: PointLight
-    radius: 1.5
-    energy: 3.0
-    color: "#b89f25"
-  - type: AccessReader
-    access: [["AllAccess"]]
-
 # Gas Tank Dispenser
 
 - type: entity
@@ -433,7 +404,7 @@
     - state: panel
       map: ["enum.WiresVisualLayers.MaintenancePanel"]
   - type: AccessReader
-    access: [["AllAccess"]]
+    access: [["Maintenance"]]
   - type: GuideHelp
     guides:
     - Chemicals
