--- a/Resources/Prototypes/Entities/Structures/meat_spike.yml
+++ b/Resources/Prototypes/Entities/Structures/meat_spike.yml
@@ -51,9 +51,9 @@
         base:
           Empty: { state: spike }
           Bloody: { state: spikebloody } # TODO: Add sprites for different species.
-  - type: Construction
-    graph: MeatSpike
-    node: MeatSpike
+#  - type: Construction
+#    graph: MeatSpike
+#    node: MeatSpike
   - type: ContainerContainer
     containers:
       body: !type:ContainerSlot
