--- a/Resources/Prototypes/SoundCollections/screams.yml
+++ b/Resources/Prototypes/SoundCollections/screams.yml
@@ -16,3 +16,41 @@
     - /Audio/Voice/Human/femalescream_3.ogg
     - /Audio/Voice/Human/femalescream_4.ogg
     - /Audio/Voice/Human/femalescream_5.ogg
+
+- type: soundCollection
+  id: ZombieScreams
+  files:
+    - /Audio/Voice/Zombie/zombie-1.ogg
+    - /Audio/Voice/Zombie/zombie-2.ogg
+    - /Audio/Voice/Zombie/zombie-3.ogg
+
+- type: soundCollection
+  id: PlantScreams
+  files:
+    # Male.
+    - /Audio/Voice/Human/malescream_1.ogg
+    - /Audio/Voice/Human/malescream_2.ogg
+    - /Audio/Voice/Human/malescream_3.ogg
+    - /Audio/Voice/Human/malescream_4.ogg
+    - /Audio/Voice/Human/malescream_5.ogg
+    - /Audio/Voice/Human/malescream_6.ogg
+
+    # Female.
+    - /Audio/Voice/Human/femalescream_1.ogg
+    - /Audio/Voice/Human/femalescream_2.ogg
+    - /Audio/Voice/Human/femalescream_3.ogg
+    - /Audio/Voice/Human/femalescream_4.ogg
+    - /Audio/Voice/Human/femalescream_5.ogg
+
+- type: soundCollection
+  id: SiliconScreams
+  files:
+    - /Audio/Machines/robotscream_1.ogg
+    - /Audio/Machines/robotscream_2.ogg
+    - /Audio/Machines/robotscream_3.ogg
+    - /Audio/Machines/robotscream_4.ogg
+    - /Audio/Machines/robotscream_5.ogg
+    - /Audio/Machines/robotscream_6.ogg
+    - /Audio/Machines/robotscream_7.ogg
+    - /Audio/Machines/robotscream_8.ogg
+    - /Audio/Machines/robotscream_9.ogg
