--- a/Resources/Prototypes/radio_channels.yml
+++ b/Resources/Prototypes/radio_channels.yml
@@ -12,3 +12,17 @@
   color: "#967101"
   # long range since otherwise it'd defeat the point of a handheld radio independent of telecomms
   longRange: true
+#These 2 below are for the linter <3
+- type: radioChannel
+  id: Security
+  name: chat-radio-security
+  keycode: 's'
+  frequency: 1359
+  color: "#ff4242"
+
+- type: radioChannel
+  id: Science
+  name: chat-radio-science
+  keycode: 'n'
+  frequency: 1351
+  color: "#cd7ccd"
